--- a/wormbot.cabal
+++ b/wormbot.cabal
@@ -18,5 +18,9 @@ cabal-version:       >=1.10
 
 executable wormbot
   main-is:             Bot.hs
-  build-depends:       base >=4.8 && <4.9, network >=2.6 && <2.7, directory >=1.2 && <1.3, process >=1.2 && <1.3
+  build-depends:       base >=4.8 && <4.9,
+                       network >=2.6,
+                       directory >=1.2 && <1.3,
+                       process >=1.2 && <1.3,
+                       url >= 2.1.3
   default-language:    Haskell2010
