--- a/wormbot.cabal
+++ b/wormbot.cabal
@@ -18,9 +18,11 @@ cabal-version:       >=1.10
 
 executable wormbot
   main-is:             Bot.hs
-  build-depends:       base >=4.8 && <4.9,
+  build-depends:       attoparsec >= 0.13,
+                       base >=4.8,
+                       directory >=1.2,
                        network >=2.6,
-                       directory >=1.2 && <1.3,
-                       process >=1.2 && <1.3,
+                       process >=1.2,
+                       text >= 1.2.2,
                        url >= 2.1.3
   default-language:    Haskell2010
