Unicode and skeleton
* added proper unicode handling to handle
* improved parsing
* implemented basic skeleton for message-passing hooks etc.

--- a/wormbot.cabal
+++ b/wormbot.cabal
@@ -20,6 +20,7 @@ executable wormbot
   main-is:             Bot.hs
   build-depends:       attoparsec >= 0.13,
                        base >=4.8,
+                       bytestring,
                        directory >=1.2,
                        network >=2.6,
                        process >=1.2,
