--- a/wormbot.cabal
+++ b/wormbot.cabal
@@ -2,7 +2,7 @@
 -- documentation, see http://haskell.org/cabal/users-guide/
 
 name:                wormbot
-version:             0.5.1.0
+version:             0.5.2.0
 synopsis:            A minimalistic IRC bot
 description:         An IRC bot that supports multiple channels, script execution, and everything else *you* can imagine.
 homepage:            https://www.github.com/ibabushkin/wormbot
@@ -16,8 +16,8 @@ build-type:          Simple
 -- extra-source-files:  
 cabal-version:       >=1.10
 
-executable wormbot
-  main-is:             Bot.hs
+library
+  exposed-modules:     Main, Defaults, Hooks, IRC
   build-depends:       attoparsec >= 0.13,
                        base >=4.8,
                        bytestring,
@@ -25,5 +25,36 @@ executable wormbot
                        network >=2.6,
                        process >=1.2,
                        text >= 1.2.2,
-                       url >= 2.1.3
+                       url >= 2.1.3,
+                       utf8-string >= 0.3.6
+  hs-source-dirs:      src
   default-language:    Haskell2010
+
+executable wormbot
+  main-is:             Main.hs
+  hs-source-dirs:      src
+  other-modules:       Defaults, Hooks, IRC
+  build-depends:       attoparsec >= 0.13,
+                       base >=4.8,
+                       bytestring,
+                       directory >=1.2,
+                       network >=2.6,
+                       process >=1.2,
+                       text >= 1.2.2,
+                       url >= 2.1.3,
+                       utf8-string >= 0.3.6
+  default-language:    Haskell2010
+
+test-suite spec
+  default-language:    Haskell2010
+  type:                exitcode-stdio-1.0
+  hs-source-dirs:      test
+  main-is:             Spec.hs
+  other-modules:       Default, IRCSpec
+  build-depends:       attoparsec >= 0.13,
+                       base,
+                       text >= 1.2.2,
+                       wormbot,
+                       hspec,
+                       QuickCheck,
+                       quickcheck-instances
