--- a/wormbot.cabal
+++ b/wormbot.cabal
@@ -25,8 +25,8 @@ library
                        network >=2.6,
                        process >=1.2,
                        text >= 1.2.2,
-                       url >= 2.1.3,
-                       utf8-string >= 0.3.6
+                       url >= 2.1.3
+                       --utf8-string >= 0.3.6
   hs-source-dirs:      src
   default-language:    Haskell2010
 
@@ -41,8 +41,8 @@ executable wormbot
                        network >=2.6,
                        process >=1.2,
                        text >= 1.2.2,
-                       url >= 2.1.3,
-                       utf8-string >= 0.3.6
+                       url >= 2.1.3
+                       --utf8-string >= 0.3.6
   default-language:    Haskell2010
 
 test-suite spec
